--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "doctrine/dbal": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "phploc/phploc": "^4.0"
     }
 }
