--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "psr/http-server-middleware": "^1.0",
         "zendframework/zend-servicemanager": "^3.3",
         "zendframework/zend-diactoros": "^1.8",
-        "mongodb/mongodb": "^1.4"
+        "mongodb/mongodb": "^1.4",
+        "respect/validation": "dev-master",
+        "egulias/email-validator": "^2.1"
     },
     "suggest": {
         "mongodb/mongodb": "*",
